# confectioner-bot

./: .gitignore  docker compose.yaml  docker-compose.yaml
backend/: Dockerfile  config.py  pyproject.toml  run.py
backend/app/: main.py  models.py
backend/app/auth/: crud.py  views.py
backend/app/data/: __init__.py  database.py  models.py
backend/app/data/database/: database.py  models.py  sql_app.db
backend/app/data/queries/: orm.py  sorting.py
backend/app/frontend_requests/: crud.py  schemas.py  views.py
backend/app/queries/: orm.py
backend/app/web_requests/: crud.py  views.py
backend/conf_bot/: handlers.py  keyboards.py  run.py
backend/conf_bot/app/: handlers.py
backend/user_bot/: handlers.py  keyboards.py  main.py
backend/user_bot/applications/: handlers.py  keyboards.py
bot/: .gitignore  DataBase.py  config.py  requirements.txt  run.py
bot/DATA/src/: database.py
bot/DATA/src/queries/: core.py  orm.py
bot/app/: handlers.py  keyboards.py
bot/bot/DATA/src/: main.py  models.py
frontend/: Dockerfile
frontend/authorization/: auth.css  auth.html  auth.js  registration.html
frontend/cake-page/: cake-page.css  cake-page.html  cake-page.js
frontend/main-page/: main-page.html
frontend/profile-page/: profile-page.css  profile-page.html  profile-page.js
user_bot/: .gitignore  config.py  main.py  requirements.txt
user_bot/Database/: database.py  models.py
user_bot/Database/queries/: orm.py
