[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["DolinovAK <dolinovak@mai.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
aiogram = "^3.15.0"
sqlalchemy = "^2.0.36"
pydantic = "2.9.0"
pydantic-settings = "^2.7.0"
uvicorn = "^0.34.0"
bcrypt = "^4.2.1"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
